@startuml
'https://plantuml.com/class-diagram
title "As a user, I want to add a publication to my library" CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

top to bottom direction

class AddPublicationOnLibraryUI {
}

package "controller" {

    class AddPublicationOnLibraryController {
      + getListOfAvailableItemsId() : List<ItemId>
      + addItemIdToLibrary(selectedItemId : ItemId, userId : UserId) : boolean
      - isItemIdAlreadyInAnyLibrary(itemId : ItemId, libraries : Iterable<Library>) : boolean
    }

}

package "domain" {

package "repository" {

    interface ILibraryRepo <<Interface>> {
    }

    interface IItemRepo <<Interface>> {
    }

}

package "valueobject" {

    together {
        class LibraryId <<Value Object>> #lightpink {
        +fromUserId(userId : UserId) : LibraryId
        }
        class UserId <<Value Object>>
    }
    class ItemId <<Value Object>> {
    }

}

package "library" #b0c4d4 {

    class Library <<Root>> <<Entity>> {
      +getItemIdsInLibrary() : List<ItemId>
      +addItemIdToLibrary(itemId : ItemId) : boolean
    }

}

package "item" #b0c4d4 {

    class Item <<Root>> <<Entity>> {
    }

}

}

package "persistence"  {

    package "mem" {

        class MemLibraryRepo {
        }

        class MemItemRepo {
        }

    }

}

Package "ddd" {

    interface IRepository<ID, T> <<Interface>> {
'    save(entity : T) : T
    findAll() : Iterable<T>
    findAllKeys() : Iterable<ID>
    ofIdentity(id : ID) : Optional <T>
'    containsOfIdentity(id : ID) : boolean
    }
    interface DomainEntity<ID> <<Interface>>{
    +identity() : ID
    +sameAs(object : Object) : boolean
    }
    interface AggregateRoot<ID> <<Interface>>{}

}

AddPublicationOnLibraryUI "1" .>  "1" AddPublicationOnLibraryController : invokes
AddPublicationOnLibraryController "1"  ..> "1" ILibraryRepo : calls
AddPublicationOnLibraryController  "1"..> "1" IItemRepo : calls
AddPublicationOnLibraryController "1"..> "*" Library : <<use>>
AddPublicationOnLibraryController "1"..> "*" UserId : <<use>>
AddPublicationOnLibraryController "1"..> "1" ItemId : <<use>>
AddPublicationOnLibraryController "1"..> "1" Item : <<use>>

MemLibraryRepo ..|> ILibraryRepo
MemLibraryRepo "1" -> "*" Library: persists
MemItemRepo "1" -> "*" Item : persists

Library "1" --> "1" LibraryId: has
LibraryId "1" .> "1" UserId: <<use>>
Library "1" o-- "*" ItemId : aggregates

ILibraryRepo --|> IRepository
IItemRepo --|> IRepository
MemItemRepo ..|> IItemRepo

Item "1" --> "1" ItemId : has
Library ..|> AggregateRoot
Item ..|> AggregateRoot
AggregateRoot --|> DomainEntity


@enduml